# paperforge

./: .gitignore  README.md  pyproject.toml
configs/: project_management_99.json
docs/: cahier-technique.md  maquettes.md
paperforge/: __init__.py  cli.py  models.py  products.py  render.py  web.py
templates/products/: project_management_99.html.j2
templates/shared/: project_pager.html.j2  topline.html.j2
templates/themes/: pro_landscape.css
templates/web/: app.html.j2
templates/web/static/: app.css
tests/: test_products.py  test_rendered_html.py
