[project]
name = "paperforge"
version = "0.1.0"
description = "Generateur de carnets PDF parametrables avec Jinja2 et WeasyPrint."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
  "weasyprint>=62",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
paperforge = "paperforge.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["paperforge*"]
exclude = ["configs*", "docs*", "templates*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
